--- a/backend/templates/world.html
+++ b/backend/templates/world.html
@@ -7,5 +7,6 @@
 <body>
   <h1>Welcome, {{ user.username }}!</h1>
   <p>Coins: {{ user.coins }}</p>
+  <p>Rocks: {{ user.rocks }}</p>
 </body>
 </html>
