--- a/frontend/style.css
+++ b/frontend/style.css
@@ -14,7 +14,7 @@ body {
     align-items: center;
 }
 .container{
-    max-width: 400px;
+    width: 400px;
 }
 .container>button{
     width: 100%;
@@ -24,4 +24,5 @@ body {
     border: none;
     outline: none;
     border-radius: 6px;
+    cursor: pointer;
 }
