--- a/frontend/style.css
+++ b/frontend/style.css
@@ -16,7 +16,7 @@ body {
 .container{
     width: 400px;
 }
-.container>button{
+button{
     width: 100%;
     height: 40px;
     background-color: rgb(10, 32, 104);
