--- a/frontend/login.css
+++ b/frontend/login.css
@@ -52,11 +52,12 @@ input:focus {
 }
 
 input[type="submit"] {
-	background-color: rgb(0, 116, 212);
-	color: rgb(255, 255, 255);
-	margin: 20px;
-	position: relative;
-	left: -20px;
+    background-color: rgb(0, 116, 212);
+    color: rgb(255, 255, 255);
+    margin: 20px;
+    position: relative;
+    left: -20px;
+    cursor: pointer;
 }
 
 form {
