--- a/frontend/login.css
+++ b/frontend/login.css
@@ -21,6 +21,15 @@ body {
 	filter: blur(0px);
 }
 
+.img2 {
+	position: absolute;
+	left: 50%;
+	width: 50%;
+	height: 100%;
+	background-image: url("https://images.unsplash.com/photo-1603194202644-2e3210fcc437?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+	filter: blur(0px);
+}
+
 .content {
 	position: absolute;
 	width: 500px;
